# ocurrent-configurator

./: .dockerignore  .gitignore  .ocamlformat  Dockerfile  LICENSE  Makefile  README.md  configure-ssh.sh  docker-compose.yml  dune-project  ocurrent-configurator.opam  run.sh
plugins/ansible/: config.ml  config.mli  configure.ml  current_ansible.ml  current_ansible.mli  dune  enumerate.ml  group.ml  group.mli  log.ml  play.ml  playbook.ml  playbook.mli  run.ml
